--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -36,15 +36,15 @@ services:
     restart: always
     
 
-  frpc:
-    image: fatedier/frpc:latest
-    container_name: frpc
-    volumes:
-      - ./frpc.toml:/etc/frp/frpc.toml:ro
-    command: ["-c", "/etc/frp/frpc.toml"]
-    extra_hosts:
-      - "host.docker.internal:host-gateway"
-    restart: always
+  # frpc:
+  #   image: fatedier/frpc:v0.64.0
+  #   container_name: frpc
+  #   volumes:
+  #     - ./frpc.toml:/etc/frp/frpc.toml:ro
+  #   command: ["-c", "/etc/frp/frpc.toml"]
+  #   extra_hosts:
+  #     - "host.docker.internal:host-gateway"
+  #   restart: always
     
 
   db:
@@ -55,10 +55,12 @@ services:
     shm_size: 1g
     volumes:
       - db_data:/var/lib/postgresql/data
+    expose:
+      - 5432
     ports:
       - 5432:5432
     environment:
-      POSTGRES_PASSWORD: changeme
+      POSTGRES_PASSWORD: 31415926
       POSTGRES_DB: windmill
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U postgres"]
@@ -66,8 +68,6 @@ services:
       timeout: 5s
       retries: 5
     logging: *default-logging
-    extra_hosts:
-      - "host.docker.internal:host-gateway"
     restart: always
     
 
@@ -76,9 +76,9 @@ services:
     pull_policy: always
     deploy:
       replicas: 1
-    ports:
-      - 8000:8000
-      - 2525:2525
+    expose:
+      - 8000
+      - 2525
     environment:
       - DATABASE_URL=${DATABASE_URL}
       - MODE=server
@@ -120,7 +120,6 @@ services:
       - "host.docker.internal:host-gateway"
     restart: always
 
-
   ## This worker is specialized for "native" jobs. Native jobs run in-process and thus are much more lightweight than other jobs
   windmill_worker_native:
     # Use ghcr.io/windmill-labs/windmill-ee:main for the ee
@@ -149,38 +148,13 @@ services:
       - "host.docker.internal:host-gateway"
     restart: always
 
-  # This worker is specialized for reports or scraping jobs. It is assigned the "reports" worker group which has an init script that installs chromium and can be targeted by using the "chromium" worker tag.
-  # windmill_worker_reports:
-  #   image: ${WM_IMAGE}
-  #   pull_policy: always
-  #   deploy:
-  #     replicas: 1
-  #     resources:
-  #       limits:
-  #         cpus: "1"
-  #         memory: 2048M
-  #         # for GB, use syntax '2Gi'
-  #   restart: unless-stopped
-  #   environment:
-  #     - DATABASE_URL=${DATABASE_URL}
-  #     - MODE=worker
-  #     - WORKER_GROUP=reports
-  #   depends_on:
-  #     db:
-  #       condition: service_healthy
-  #   # to mount the worker folder to debug, KEEP_JOB_DIR=true and mount /tmp/windmill
-  #   volumes:
-  #     # mount the docker socket to allow to run docker containers from within the workers
-  #     - /var/run/docker.sock:/var/run/docker.sock
-  #     - worker_dependency_cache:/tmp/windmill/cache
-  #     - worker_logs:/tmp/windmill/logs
-
-  # The indexer powers full-text job and log search, an EE feature.
   windmill_indexer:
     image: ${WM_IMAGE}
     pull_policy: always
     deploy:
       replicas: 0 # set to 1 to enable full-text job and log search
+    expose:
+      - 8002
     environment:
       - PORT=8002
       - DATABASE_URL=${DATABASE_URL}
@@ -196,7 +170,6 @@ services:
       - "host.docker.internal:host-gateway"
     restart: always
 
-
   lsp:
     image: ghcr.io/windmill-labs/windmill-lsp:latest
     pull_policy: always
@@ -205,6 +178,7 @@ services:
     volumes:
       - lsp_cache:/pyls/.cache
     logging: *default-logging
+    restart: always
 
   multiplayer:
     image: ghcr.io/windmill-labs/windmill-multiplayer:latest
@@ -217,7 +191,6 @@ services:
       - "host.docker.internal:host-gateway"
     restart: always
 
-
   caddy:
     image: ghcr.io/windmill-labs/caddy-l4:latest
     # Configure the mounted Caddyfile and the exposed ports or use another reverse proxy if needed
@@ -227,8 +200,8 @@ services:
       # - ./certs:/certs # Provide custom certificate files like cert.pem and key.pem to enable HTTPS - See the corresponding section in the Caddyfile
     ports:
       # To change the exposed port, simply change 80:80 to <desired_port>:80. No other changes needed
-      - 80:80
-      - 25:25
+      - 8080:80
+      - 2525:25
       # - 443:443 # Uncomment to enable HTTPS handling by Caddy
     environment:
       - BASE_URL=":80"
@@ -239,12 +212,14 @@ services:
       - "host.docker.internal:host-gateway"
     restart: always
 
-
 volumes:
-  db_data: {}
-  worker_dependency_cache: {}
-  worker_logs: {}
-  windmill_index: {}
-  lsp_cache: {}
-  caddy_data: {}
-  n8n_data: {}
+  db_data: null
+  worker_dependency_cache: null
+  worker_logs: null
+  windmill_index: null
+  lsp_cache: null
+  caddy_data: null
+  n8n_data: null
+
+
+
