--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 DATABASE_URL=postgres://postgres:31415926@db/windmill?sslmode=disable
 WM_IMAGE=ghcr.io/windmill-labs/windmill:main
+COMPOSE_PROJECT_NAME=local_workflows
